--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -20,3 +20,63 @@
 * {
     box-sizing: border-box;
 }
+
+
+.section-heading {
+    display: block;
+    font-size: 40px;
+    font-weight: 500;
+    margin: 0;
+    height: 54px;
+    text-align: center;
+    margin-bottom: 14px;
+    position: relative;
+    line-height: 54px;
+    margin-bottom: 2rem;
+    text-shadow: 0 0 3px #000;
+    z-index: 2;
+}
+
+.section-heading::after {
+    left: 50%;
+    transform: translate(-50%, 0%);
+    bottom: -2px;
+    content: "";
+    width: 0;
+    height: 2px;
+    display: inline-block;
+    background: #fff;
+    position: absolute;
+    transition: width 0.3s ease;
+    z-index: 2;
+}
+
+.section-heading:hover::after {
+    width: 160px;
+}
+
+.section-sub-heading {
+    display: inline-block;
+    margin-bottom: 14px;
+    position: relative;
+    margin-bottom: 8px;
+    z-index: 2;
+    cursor: pointer;
+}
+
+.section-sub-heading::after {
+    left: 0;
+    bottom: -2px;
+    content: "";
+    width: 0;
+    height: 2px;
+    display: block;
+    background: var(--secondary-color);
+    position: absolute;
+    transition: width 0.3s ease;
+    z-index: 2;
+}
+
+.section-sub-heading:hover::after {
+    width: 100%;
+}
