--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,80 +3,118 @@
 @tailwind utilities;
 
 :root {
-    --primary-color: #1F5AFE;
-    --secondary-color: #223463;
-    --tertiary-color: ;
-    --quaternary-color: ;
-    --quinary-color: ;
-    --senary-color: ;
-    --septenary-color: ;
-    --octonary-color: ;
-    --nonary-color: ;
-    --denary-color: ;
-    --success-color: #28a745;
-    --danger-color: #dc3545;
+  --primary-color: #1f5afe;
+  --secondary-color: #223463;
+  --tertiary-color: ;
+  --quaternary-color: ;
+  --quinary-color: ;
+  --senary-color: ;
+  --septenary-color: ;
+  --octonary-color: ;
+  --nonary-color: ;
+  --denary-color: ;
+  --success-color: #28a745;
+  --danger-color: #dc3545;
 }
 
 * {
-    box-sizing: border-box;
+  box-sizing: border-box;
 }
 
-
 .section-heading {
-    display: block;
-    font-size: 40px;
-    font-weight: 500;
-    margin: 0;
-    height: 54px;
-    text-align: center;
-    margin-bottom: 14px;
-    position: relative;
-    line-height: 54px;
-    margin-bottom: 2rem;
-    text-shadow: 0 0 3px #000;
-    z-index: 2;
+  display: block;
+  font-size: 40px;
+  font-weight: 500;
+  margin: 0;
+  height: 54px;
+  text-align: center;
+  margin-bottom: 14px;
+  position: relative;
+  line-height: 54px;
+  margin-bottom: 2rem;
+  text-shadow: 0 0 3px #000;
+  z-index: 2;
 }
 
 .section-heading::after {
-    left: 50%;
-    transform: translate(-50%, 0%);
-    bottom: -2px;
-    content: "";
-    width: 0;
-    height: 2px;
-    display: inline-block;
-    background: #fff;
-    position: absolute;
-    transition: width 0.3s ease;
-    z-index: 2;
+  left: 50%;
+  transform: translate(-50%, 0%);
+  bottom: -2px;
+  content: "";
+  width: 0;
+  height: 2px;
+  display: inline-block;
+  background: #fff;
+  position: absolute;
+  transition: width 0.3s ease;
+  z-index: 2;
 }
 
 .section-heading:hover::after {
-    width: 160px;
+  width: 160px;
 }
 
 .section-sub-heading {
-    display: inline-block;
-    margin-bottom: 14px;
-    position: relative;
-    margin-bottom: 8px;
-    z-index: 2;
-    cursor: pointer;
+  display: inline-block;
+  margin-bottom: 14px;
+  position: relative;
+  margin-bottom: 8px;
+  z-index: 2;
+  cursor: pointer;
 }
 
 .section-sub-heading::after {
-    left: 0;
-    bottom: -2px;
-    content: "";
-    width: 0;
-    height: 2px;
-    display: block;
-    background: var(--secondary-color);
-    position: absolute;
-    transition: width 0.3s ease;
-    z-index: 2;
+  left: 0;
+  bottom: -2px;
+  content: "";
+  width: 0;
+  height: 2px;
+  display: block;
+  background: var(--secondary-color);
+  position: absolute;
+  transition: width 0.3s ease;
+  z-index: 2;
 }
 
 .section-sub-heading:hover::after {
-    width: 100%;
+  width: 100%;
+}
+
+.blog-button {
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: var(--primary-color);
+  border: 1px solid var(--primary-color);
+  overflow: hidden;
+  cursor: pointer;
+
+  color: white;
+  z-index: 1000;
+}
+
+.blog-button:after {
+  content: " ";
+  width: 100%;
+  height: 100%;
+  background: var(--secondary-color);
+  position: absolute;
+  transition: all 0.4s ease-in-out;
+  left: 0;
+}
+.blog-button:hover::after {
+  left: auto;
+  right: 0;
+  width: 0%;
+}
+.blog-button span {
+  font-size: 14px;
+  text-align: center;
+  text-decoration: none;
+  width: 100%;
+  color: white;
+  padding: 0 15px;
+  z-index: 20;
+  transition: all 0.3s ease-in-out;
 }
